# DashServer

./: .gitignore  pyproject.toml
dashserver/: app.py
